feat: create products endpoints openapi
