# src/adapter/driver/http/routes/products.ts
@@ -5,15 +5,23 @@ import { ProductCategory } from "@/core/domain/product";
 import { ProductService } from "@/core/application/services/product.service";
 import {
   createProductRequestBodySchema,
+  createProductResponseSchema,
+  deleteProductRequestParamsSchema,
   getProductCategoryRequestParamsSchema,
+  getProductsResponseSchema,
   updateProductRequestBodySchema,
+  updateProductResponseSchema,
 } from "../schemas/products";
+import { OpenAPIRegistry } from "@asteasolutions/zod-to-openapi";
 
 export class HttpProductsRoutes {
   constructor(
     private readonly app: Express,
-    private readonly service: ProductService
-  ) {}
+    private readonly service: ProductService,
+    private readonly openAPIRegistry: OpenAPIRegistry
+  ) {
+    this.openApi();
+  }
 
   setup(): void {
     this.app.get("/products", async (_, res) => {
@@ -68,6 +76,133 @@ export class HttpProductsRoutes {
       const { id } = req.params;
       await this.service.remove(id);
       res.status(204).send();
+    });
+  }
+
+  openApi(): void {
+    // GET /products
+    this.openAPIRegistry.registerPath({
+      tags: ["Products"],
+      method: "get",
+      path: "/products",
+      responses: {
+        200: {
+          description: "Products list",
+          content: {
+            "application/json": {
+              schema: getProductsResponseSchema,
+            },
+          },
+        },
+      },
+    });
+
+    // GET /products/:category
+    this.openAPIRegistry.registerPath({
+      tags: ["Products"],
+      method: "get",
+      path: "/products/{category}",
+      request: {
+        params: getProductCategoryRequestParamsSchema,
+      },
+      responses: {
+        200: {
+          description: "Products list by category",
+          content: {
+            "application/json": {
+              schema: getProductsResponseSchema,
+            },
+          },
+        },
+        400: {
+          description: "Invalid request body",
+        },
+        500: {
+          description: "Internal server error",
+        },
+      },
+    });
+
+    // POST /products
+    this.openAPIRegistry.registerPath({
+      tags: ["Products"],
+      method: "post",
+      path: "/products",
+      request: {
+        body: {
+          content: {
+            "application/json": {
+              schema: createProductRequestBodySchema,
+            },
+          },
+        },
+      },
+      responses: {
+        201: {
+          description: "Product created",
+          content: {
+            "application/json": {
+              schema: createProductResponseSchema,
+            },
+          },
+        },
+        400: {
+          description: "Invalid request body",
+        },
+        500: {
+          description: "Internal server error",
+        },
+      },
+    });
+
+    // PATCH /products/:id
+    this.openAPIRegistry.registerPath({
+      tags: ["Products"],
+      method: "patch",
+      path: "/products/{id}",
+      request: {
+        body: {
+          content: {
+            "application/json": {
+              schema: updateProductRequestBodySchema,
+            },
+          },
+        },
+      },
+      responses: {
+        200: {
+          description: "Product updated",
+          content: {
+            "application/json": {
+              schema: updateProductResponseSchema,
+            },
+          },
+        },
+        400: {
+          description: "Invalid request body",
+        },
+        500: {
+          description: "Internal server error",
+        },
+      },
+    });
+
+    // DELETE /products/:id
+    this.openAPIRegistry.registerPath({
+      tags: ["Products"],
+      method: "delete",
+      path: "/products/{id}",
+      request: {
+        params: deleteProductRequestParamsSchema,
+      },
+      responses: {
+        204: {
+          description: "Product deleted",
+        },
+        500: {
+          description: "Internal server error",
+        },
+      },
     });
   }
 }
